# cpp_experiments

./: README.md
core_dump/: CMakeLists.txt  main.cpp
log4cxx/: CMakeLists.txt  log4cxx.properties  main.cpp
